{
    "name": "pinchAndroid",
    "maps": [
        {
            "name": "Android",
            "id": "55ed85a7-cfce-4142-b681-582b9b308777",
            "actions": [
                {
                    "name": "FirstFingerPosition",
                    "type": "Value",
                    "id": "530231a9-3781-42f5-9aaa-92991213e4b3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondFingerPosition",
                    "type": "Value",
                    "id": "3176c7a3-fa1c-4475-9fcc-1b1b39b9aa54",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchContact",
                    "type": "Button",
                    "id": "c5f3cf17-5dcb-4eb8-88b3-a08789fce295",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ace17d7b-8dc1-4638-94a8-99a3c7741917",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PinchSystem",
                    "action": "FirstFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6beaa0a8-2a0d-41e7-892c-c0c6e0d4d901",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PinchSystem",
                    "action": "SecondFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42570808-7214-4e20-8299-6e41e3410e3d",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "PinchSystem",
                    "action": "SecondTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PinchSystem",
            "bindingGroup": "PinchSystem",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}